Added address fields to be retrurned from the database functions Added address attribute to the DB type definition Added address fields to Transparency Site mappings Updated api.yaml
