# modules/api/src/DTO/Response/TransparencySite.cs
@@ -7,6 +7,11 @@ public class TransparencySite
     public Guid Id { get; set; }
     public string OdsCode { get; set; } = "";
     public string Name { get; set; } = "";
+    public string Line1 { get; set; } = "";
+    public string Line2 { get; set; } = "";
+    public string Town { get; set; } = "";
+    public string County { get; set; } = "";
+    public string Country { get; set; } = "";
     public string Postcode { get; set; } = "";
 
     public bool AccessRecordHTMLEnabled { get; set; }
